--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,30 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+table {
+  border-collapse: collapse;
+}
+caption {
+  height: 42px;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 42px;
+  padding: 0 1rem;
+  text-align: left;
+}
+caption>button {
+  vertical-align: middle;
+}
+th {
+  height: 35px;
+  padding: 0 15px;
+  position: relative;
+  vertical-align: bottom;
+}
+td {
+  height: 28px;
+}
+th, td {
+  border-bottom: 1px solid #ccc;
+}
