--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,2 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
-table {
-  border-collapse: collapse;
-}
-caption {
-  height: 42px;
-  font-size: 1.6rem;
-  font-weight: 300;
-  line-height: 42px;
-  padding: 0 1rem;
-  text-align: left;
-}
-caption>button {
-  vertical-align: middle;
-}
-th {
-  height: 35px;
-  padding: 0 15px;
-  position: relative;
-  vertical-align: bottom;
-}
-td {
-  height: 28px;
-}
-th, td {
-  border-bottom: 1px solid #ccc;
-}
+@import url(/fonts/NanumSquare.css);
+@import url(//fonts.googleapis.com/css?family=Roboto:300,700);
